-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 10.0.0
-
585eb1c3e (11.0)
When one tries to alias a root item property, he/she will be greeted by such warning:
Avoid referencing the root item in a hierarchy (M402)
A snippet to reproduce the warning:
Rectangle {
id: root
property alias backgroundColor: root.color <- Here goes the warning message
}
The reason of aliasing root item property is to, for example, giving the property a better/more descriptive name. I think it is a valid use case.
A result from https://codereview.qt-project.org/c/qt-creator/qt-creator/+/390841
| For Gerrit Dashboard: QTCREATORBUG-29088 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 482501,2 | QmlJS: Switch default enabled state for analyzer message | 11.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |