QmlJS: Switch default enabled state for analyzer message

This message was mainly added for the QmlDesigner and DesignStudio.
It might be a valid warning under circumstances, but it may also
prevent valid use cases.
Turn it off by default and enable it for the QmlDesigner parts.

Fixes: QTCREATORBUG-29088
Change-Id: Id2c76efdf3fa419cfce71ad89360927241d41ac8
Reviewed-by: Tim Jenssen <tim.jenssen@qt.io>
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>